k8s/yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: address-api
  template:
    metadata:
      labels:
        app: address-api
    spec:
      containers:
        - name: address-api
          image: brakmic/address-api:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
