k8s/yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: address-api
spec:
  selector:
    app: address-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
