k8s/yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: address-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: address-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: address-api
                port:
                  number: 3000
